bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery1 (Optimized, PlainTerm).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
BasicGraphPattern: projection=[site_label, wtur_label, t, val], filters=[EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A1,language:})) AND EBV(EQ(ENC_TF(site_label), Union 2:{value:Wind Mountain,language:})) AS EBV(BOOLEAN_AS_TERM(EBV(EQ(ENC_TF(wtur_label),ENC_TF(Struct({term_type:2,value:A1,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) AND EBV(EQ(ENC_TF(site_label),ENC_TF(Struct({term_type:2,value:Wind Mountain,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:}))))))]
  QuadPattern: triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>]
  QuadPattern: triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label]
  QuadPattern: triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp]
  QuadPattern: triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label]
  QuadPattern: triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp]
  QuadPattern: triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp]
  QuadPattern: triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>]
  QuadPattern: triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp]
  QuadPattern: triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>]
  QuadPattern: triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp]
  QuadPattern: triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp]
  QuadPattern: triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>]
  QuadPattern: triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts]
  QuadPattern: triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"]
  QuadPattern: triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp]
  QuadPattern: triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val]
  QuadPattern: triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t]
