bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery2 (Execution Plan).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(site_label@0) as site_label, ENC_PT(wtur_label@1) as wtur_label, ENC_PT(t@3) as t, ENC_PT(val@2) as val]
  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, val@3, t@5]
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, dp@2, val@4]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, dp@4]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, ts@2]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, ts@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, generator@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@2, generator_asp@1)], projection=[site_label@0, wtur_label@1, generator@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, generator_asp@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, gensys@2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@2, gensys_asp@1)], projection=[site_label@0, wtur_label@1, gensys@3]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, gensys_asp@3]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, wtur@2, gensys_asp@4]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@1)], projection=[site_label@0, wtur_label@2, wtur@3]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@0)], projection=[site_label@0, wtur_asp@1, wtur_label@3]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site_label@1, wtur_asp@3]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@2]
                                  DataSourceExec: [GPOS] subject=?site, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#Site>
                                  FilterExec: EBV(EQ(ENC_TF(site_label@1), 2:{value:Wind Mountain,language:}))
                                    DataSourceExec: [GPOS] subject=?site, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?site_label, additional_filters=[DynamicFilter [ Generation 2; site in (<object id range>) ]]
                                DataSourceExec: [GPOS] subject=?site, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?wtur_asp, additional_filters=[DynamicFilter [ Generation 2; site in (<object id range>) ]]
                              FilterExec: EBV(EQ(__common_expr_3@0, 2:{value:A1,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A2,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A3,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A4,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A5,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A6,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A7,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A8,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A9,language:})) OR EBV(EQ(__common_expr_3@0, 2:{value:A10,language:})), projection=[wtur_asp@1, wtur_label@2]
                                ProjectionExec: expr=[ENC_TF(wtur_label@1) as __common_expr_3, wtur_asp@0 as wtur_asp, wtur_label@1 as wtur_label]
                                  DataSourceExec: [GPOS] subject=?wtur_asp, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?wtur_label, additional_filters=[DynamicFilter [ Generation 2; wtur_asp in (<object id range>) ]]
                            DataSourceExec: [GPOS] subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?wtur_asp, additional_filters=[DynamicFilter [ Generation 2; wtur_asp in (<object id range>) ]]
                          DataSourceExec: [GPOS] subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?gensys_asp, additional_filters=[DynamicFilter [ Generation 2; wtur in (<object id range>) ]]
                        DataSourceExec: [GPOS] subject=?wtur, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#A>, additional_filters=[DynamicFilter [ Generation 2; wtur in (<object id range>) ]]
                      DataSourceExec: [GPOS] subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?gensys_asp, additional_filters=[DynamicFilter [ Generation 2; gensys_asp in (<object id range>) ]]
                    DataSourceExec: [GPOS] subject=?gensys, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#RA>, additional_filters=[DynamicFilter [ Generation 2; gensys in (<object id range>) ]]
                  DataSourceExec: [GPOS] subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?generator_asp, additional_filters=[DynamicFilter [ Generation 2; gensys in (<object id range>) ]]
                DataSourceExec: [GPOS] subject=?generator, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?generator_asp, additional_filters=[DynamicFilter [ Generation 2; generator_asp in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?generator, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#GAA>, additional_filters=[DynamicFilter [ Generation 2; generator in (<object id range>) ]]
            DataSourceExec: [GPOS] subject=?generator, predicate=<https://github.com/magbak/chrontext#hasTimeseries>, object=?ts, additional_filters=[DynamicFilter [ Generation 2; generator in (<object id range>) ]]
          DataSourceExec: [GPOS] subject=?ts, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object="Production", additional_filters=[DynamicFilter [ Generation 2; ts in (<object id range>) ]]
        DataSourceExec: [GPOS] subject=?ts, predicate=<https://github.com/magbak/chrontext#hasDataPoint>, object=?dp, additional_filters=[DynamicFilter [ Generation 2; ts in (<object id range>) ]]
      DataSourceExec: [GPOS] subject=?dp, predicate=<https://github.com/magbak/chrontext#hasValue>, object=?val, additional_filters=[DynamicFilter [ Generation 2; dp in (<object id range>) ]]
    DataSourceExec: [GPOS] subject=?dp, predicate=<https://github.com/magbak/chrontext#hasTimestamp>, object=?t, additional_filters=[DynamicFilter [ Generation 2; dp in (<object id range>) ]]
